Fixed bug with nav on mobile

--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -23,7 +23,7 @@
       top: 100px;
       left: 0;
       right: 0;
-      bottom: 0;
+      bottom: -100px;
       background-color: $white;
       z-index: 2;
       line-height: 8;
